--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,6 @@
-<p>button works!</p>
+<button
+    style="background: linear-gradient(90deg, rgb(8, 204, 202) 0%, rgb(24, 231, 156) 100%);"
+    class="w-full text-white font-neo-semibold rounded-md"
+>
+    Continue with this email
+</button>
