--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,1 +1,5 @@
-<input type="text" placeholder="this is my input component"/>
+<input
+    class="outline-none focus:border-b-2 py-1 border-[rgb(9,206,198)] text-xs w-full"
+    type="text"
+    placeholder="your@email.com"
+/>
