--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,7 +12,14 @@
         </div>
         <div class="flex flex-col w-full justify-center items-center mb-6">
             <div class="flex flex-col w-full justify-center items-center mb-6">
-                <app-button class="w-[396px] flex justify-center h-[50px] mb-3"></app-button>
+                <app-button
+                    [radius]="10"
+                    [paddingX]="16"
+                    [paddingY]="4"
+                    title="Continue with this email"
+                    class="w-[396px] flex justify-center h-[50px] mb-3"
+                >
+                </app-button>
                 <div class="text-sm cursor-pointer text-[rgb(142,142,142)] hover:text-[rgb(85,85,85)]">Forgot password?</div>
             </div>
             <div class="flex flex-row w-[396px] mb-6 text-center">
