--- a/src/app/components/artist-card/artist-card.component.html
+++ b/src/app/components/artist-card/artist-card.component.html
@@ -1,5 +1,5 @@
 <div class="w-[208px] h-[280px] bg-white rounded-[14px] shadow flex flex-col relative">
-    <div class="w-[208px] h-[208px] overflow-hidden img-scale rounded-tl-[14px] z-10 rounded-tr-[14px] z-0">
+    <div class="w-[208px] h-[208px] overflow-hidden img-scale rounded-tl-[14px] rounded-tr-[14px] z-0">
         <img
             class="w-full h-full object-cover img-bg-artist transition-transform duration-200 ease-in-out"
             src="https://shorturl.at/btuR7"
